force-app/main/default/objects/Utility_Marking_Vendor__c/Utility_Marking_Vendor__c.object-meta.xml
<CustomObject>
    <description>One record per state 811 / utility marking vendor. Used by UtilityMarkingService to dispatch locate requests when a Work Order enters the 30 Days bucket.</description>
    <label>Utility Marking Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Marking Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>