force-app/main/default/objects/Utility_Marking_Vendor__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive vendors are skipped during 811 dispatch. Use to retire a vendor without deleting historical records.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>