force-app/main/default/objects/Utility_Marking_Vendor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Distribution email for the state&apos;s 811 / utility marking service. UtilityMarkingService sends locate requests here.</description>
    <label>Distribution Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>