force-app/main/default/objects/Utility_Marking_Vendor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Voice line for the state&apos;s 811 service. Reference only.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>