force-app/main/default/objects/Utility_Marking_Vendor__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Two-letter US state code (NC, SC, GA, etc.). Drives vendor lookup based on the lot&apos;s Community state.</description>
    <label>State</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>